# raft

./: Cargo.toml  Makefile.toml  README.md
docs/: aliases.js  search-index.js  settings.html  source-files.js
docs/api/: search-index.js  settings.html
docs/api/raft/: all.html  index.html  sidebar-items.js  struct.NotLeader.html  type.CommandPtr.html  type.ServerId.html  type.Term.html
docs/api/raft/log/: index.html  struct.Item.html  trait.Log.html  type.InVec.html  type.Index.html
docs/api/raft/rpc/: index.html  sidebar-items.js  struct.AppendEntriesRequest.html  struct.AppendEntriesResponse.html  (+3 more)
docs/raft/: all.html  index.html  sidebar-items.js
docs/raft/log/: index.html  sidebar-items.js  struct.Item.html  struct.LogItem.html  trait.Log.html  type.InVec.html  type.LogIndex.html
docs/raft/rpc/: index.html  sidebar-items.js  struct.AppendEntriesRequest.html  struct.AppendEntriesResponse.html  struct.RequestVoteRequest.html  struct.RequestVoteResponse.html  trait.RPCMessage.html
docs/raft/server/: index.html  struct.Server.html
docs/raft/state/: enum.States.html  index.html  sidebar-items.js  struct.Leader.html  struct.LeaderState.html  struct.Persistent.html  struct.PersistentState.html  struct.ServerState.html
docs/raft/state_machine/: index.html  sidebar-items.js  type.Receiver.html  type.StateMachineReceiver.html
docs/src/raft/: lib.rs.html  log.rs.html  rpc.rs.html  server.rs.html  state.rs.html  state_machine.rs.html
src/: lib.rs  log.rs  rpc.rs  server.rs  state.rs  state_machine.rs  transport.rs
tests/: cluster.rs  scenario.rs
(+46 files in other folders)
