[package]
name = "raft"
version = "0.1.0"
authors = ["Mike Bush <platy@njk.onl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.114", features = ["derive"] }
futures = "0.3.0"
tokio = { version = "0.2.22", features = ["time", "rt-core"]}
actix = "0.10.0-alpha.3"
random-number = "0.1.3"
log = "0.4"
